Devops-Notes/Kuberntes-data/Kubernets-files/Replicaset.yml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service4
spec:
  selector:
    app: javawebapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
