Devops-Notes/Kuberntes-data/Kubernets-files/Egress.yml
# How to create Egress file
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: my-nginx-network-policy
spec:
  podSelector:
    matchLabels:
      app: my-nginx
  policyTypes:
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: my-tomcat   # From above my-nginx pod only you can expose or send request my-tomcat pod data
    ports:
    - protocol: TCP
      port: 80
